text alignment fix

--- a/v3/css/index.css
+++ b/v3/css/index.css
@@ -47,6 +47,7 @@ sub { vertical-align: sub; font-size: smaller; }
   letter-spacing: 0.5rem;
   text-transform: uppercase;
   margin-bottom: 40px;
+  text-aligh: left;
 }
 
 h1 {
